root/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any any 0.0.0.0/0 any 192.168.0.0/24 in
-A ufw-user-input -s 192.168.0.0/24 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 192.168.1.0/24 in
-A ufw-user-input -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow tcp 6881 0.0.0.0/0 any 0.0.0.0/0 qBittorrent - in
-A ufw-user-input -p tcp --dport 6881 -j ACCEPT -m comment --comment 'dapp_qBittorrent'

### tuple ### limit tcp 22 0.0.0.0/0 any 0.0.0.0/0 SSH - in
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set -m comment --comment 'dapp_SSH'
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit -m comment --comment 'dapp_SSH'
-A ufw-user-input -p tcp --dport 22 -j ufw-user-limit-accept -m comment --comment 'dapp_SSH'

### tuple ### limit tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 22 -j ufw-user-limit-accept

### tuple ### allow tcp 22000 0.0.0.0/0 any 0.0.0.0/0 syncthing - in
-A ufw-user-input -p tcp --dport 22000 -j ACCEPT -m comment --comment 'dapp_syncthing'

### tuple ### allow udp 21027 0.0.0.0/0 any 0.0.0.0/0 syncthing - in
-A ufw-user-input -p udp --dport 21027 -j ACCEPT -m comment --comment 'dapp_syncthing'

### tuple ### limit tcp 2022 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2022 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 2022 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 2022 -j ufw-user-limit-accept

### tuple ### allow udp 41641 0.0.0.0/0 any 0.0.0.0/0 tailscale - in
-A ufw-user-input -p udp --dport 41641 -j ACCEPT -m comment --comment 'dapp_tailscale'

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
