root/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 6881 ::/0 any ::/0 qBittorrent - in
-A ufw6-user-input -p tcp --dport 6881 -j ACCEPT -m comment --comment 'dapp_qBittorrent'

### tuple ### limit tcp 22 ::/0 any ::/0 SSH - in
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set -m comment --comment 'dapp_SSH'
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw6-user-limit -m comment --comment 'dapp_SSH'
-A ufw6-user-input -p tcp --dport 22 -j ufw6-user-limit-accept -m comment --comment 'dapp_SSH'

### tuple ### allow tcp 22000 ::/0 any ::/0 syncthing - in
-A ufw6-user-input -p tcp --dport 22000 -j ACCEPT -m comment --comment 'dapp_syncthing'

### tuple ### allow udp 21027 ::/0 any ::/0 syncthing - in
-A ufw6-user-input -p udp --dport 21027 -j ACCEPT -m comment --comment 'dapp_syncthing'

### tuple ### limit tcp 2022 ::/0 any ::/0 eternal-terminal - in
-A ufw6-user-input -p tcp --dport 2022 -m conntrack --ctstate NEW -m recent --set -m comment --comment 'dapp_eternal-terminal'
-A ufw6-user-input -p tcp --dport 2022 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw6-user-limit -m comment --comment 'dapp_eternal-terminal'
-A ufw6-user-input -p tcp --dport 2022 -j ufw6-user-limit-accept -m comment --comment 'dapp_eternal-terminal'

### tuple ### allow udp 41641 ::/0 any ::/0 tailscale - in
-A ufw6-user-input -p udp --dport 41641 -j ACCEPT -m comment --comment 'dapp_tailscale'

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
